[package]
name = "splitter"
version = "0.1.0"
edition = "2024"

[dependencies]
iceoryx2 = { version = "0.8.1", features = ["libc_platform"]}
libcamera = "0.6.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "webrtc_streamer"
path = "examples/webrtc_streamer.rs"
